--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-<title>Jaydeep Mohite</title>
-</head>
-<body>
-<h1>Coming Soon . . .</h1>
-</body>
+  <head>
+    <title>Jaydeep Mohite</title>
+  </head>
+  <body>
+    <h1 style="text-align:center">Website Under Construction!</h1>
+    <h2 style="text-align:center">Launching Soon . . .</h2>
+  </body>
 </html>
