links open in new tab, added website hits counter

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             </h3>
             <hr/>
             <ul class="social">
-                <li><a href="http://facebook.com/jaydeepmohite"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="http://twitter.com/jaydeepmohite"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://plus.google.com/u/0/+JaydeepMohite"><i class="fab fa-google-plus"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/jaydeepmohite/"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="http://instagram.com/jaydeepmohite"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="http://github.com/jaydeepmohite"><i class="fab fa-github"></i></a></li>
-                <li><a href="http://skype.com"><i class="fab fa-skype"></i></a></li>
+                <li><a href="http://facebook.com/jaydeepmohite" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="http://twitter.com/jaydeepmohite" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://plus.google.com/u/0/+JaydeepMohite" target="_blank"><i class="fab fa-google-plus"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jaydeepmohite/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="http://instagram.com/jaydeepmohite" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="http://github.com/jaydeepmohite" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="http://skype.com" target="_blank"><i class="fab fa-skype"></i></a></li>
             </ul>
         </div>
     </div>
@@ -365,18 +365,20 @@
     <div class="row">
         <div class="twelve columns">
             <ul class="social-links">
-                <li><a href="http://facebook.com/jaydeepmohite"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="http://twitter.com/jaydeepmohite"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://plus.google.com/u/0/+JaydeepMohite"><i class="fab fa-google-plus"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/jaydeepmohite/"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="http://instagram.com/jaydeepmohite"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="http://github.com/jaydeepmohite"><i class="fab fa-github"></i></a></li>
-                <li><a href="http://skype.com"><i class="fab fa-skype"></i></a></li>
+                <li><a href="http://facebook.com/jaydeepmohite" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="http://twitter.com/jaydeepmohite" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://plus.google.com/u/0/+JaydeepMohite" target="_blank"><i class="fab fa-google-plus"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jaydeepmohite/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="http://instagram.com/jaydeepmohite" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="http://github.com/jaydeepmohite" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="http://skype.com" target="_blank"><i class="fab fa-skype"></i></a></li>
             </ul>
             <ul class="copyright">
                 <li>&copy; Copyright 2019 Jaydeep Mohite</li>
-                <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
+                <li>Design by <a title="Styleshout" href="http://www.styleshout.com/" target="_blank">Styleshout</a></li>
             </ul>
+            <img src="https://smallseotools.com/counterDisplay?code=0409147552d826bc16fab82512f417dc&style=0015&pad=5&type=ip&initCount="  
+				title="Web Counter" Alt="Web Counter" border="0">
         </div>
         <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
     </div>
