updated counter snippet

--- a/index.html
+++ b/index.html
@@ -377,8 +377,7 @@
                 <li>&copy; Copyright 2019 Jaydeep Mohite</li>
                 <li>Design by <a title="Styleshout" href="http://www.styleshout.com/" target="_blank">Styleshout</a></li>
             </ul>
-            <img src="https://smallseotools.com/counterDisplay?code=0409147552d826bc16fab82512f417dc&style=0015&pad=5&type=ip&initCount="  
-				title="Web Counter" Alt="Web Counter" border="0">
+            <img src="https://hitcounter.pythonanywhere.com/count/tag.svg?url=http%3A%2F%2Fwww.jaydeepmohite.me" alt="Hits">
         </div>
         <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
     </div>
