Updates to work experience section

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="banner-text">
             <h1 class="responsive-headline">I'm Jaydeep Mohite.</h1>
             <h3>I'm a Pune based <span>Software Developer</span>.
-                I'm an experienced business application development professional with a demonstrated history of working
-                in the investment banking industry. Let's
+                I'm an energetic software engineer with 2+ years experience of developing robust code for complex business
+                applications. Let's
                 <a class="smoothscroll" href="#about">
                     start scrolling
                 </a>
@@ -88,9 +88,9 @@
         <div class="nine columns main-col">
             <h2>About Me</h2>
             <p>
-                I'm an experienced Software Developer with a demonstrated history of working in the investment banking
-                industry. I'm a strong business application development professional with a Bachelor of Technology
-                (B.Tech) focused in Computer Engineering from College of Engineering, Pune.
+                I'm an energetic software engineer with 2+ years experience of developing robust code for complex
+                business applications. I'm an enthusiastic team player with a can-do attitude, phenomenal time management
+                skills, and a strong user focus.
             </p>
             <div class="row">
                 <div class="columns contact-details">
@@ -162,24 +162,30 @@
         <div class="nine columns main-col">
             <div class="row item">
                 <div class="twelve columns">
-                    <h3>Deutsche Bank</h3>
+                    <h3>DBOI Global Services Pvt. Ltd. | Deutsche Bank Group</h3>
                     <p class="info">Senior Analyst <span>&bull;</span> <em class="date">January 2019 - Present</em>
                     </p>
-                    <p>
-                        Part of dbPalace team in Market Finance under Enterprise Risk Technology, currently contributing
-                        in the development, enhancement and support of global PnL calculation system for Deutsche Bank.
-                    </p>
                     <p class="info">Analyst <span>&bull;</span> <em class="date">January 2018 - December 2018</em>
-                    </p>
-                    <p>
-                        Part of Graduate Rotation programme, worked under Market Finance division. Developed Digital
-                        Planning Board and Server Analysis Tool during the rotation programme.
                     </p>
                     <p class="info">Graduate Trainee <span>&bull;</span> <em class="date">July 2017 - December 2017</em>
                     </p>
                     <p>
-                        Part of Deutsche Bank Global Graduate Programme 2017 held in London. Developed a micro-trade
-                        analysis app as part of the training programme.
+                        * Responsible for spearheading the team that created a standalone webapp that handles realtime
+                        virtual planning activities with hundreds of users across multiple locations.<br/>
+                        * Instrumental in the development of dashboard that depicts infrastructure allocation across
+                        components reducing configuration issue identification.<br/>
+                        * Built client centric robust reporting features reducing client manual workload by 35%.<br/>
+                        * Instituted the test automation framework resulting in 65% code coverage and reduces manual QA.<br/>
+                        * Led the drive to automate the non-human part of the software development process, with continuous
+                        integration and facilitating technical aspects of continuous delivery.<br/>
+                        * Played a key role in migrating to an ondemand cloud platform solving major server utilization
+                        issues.<br/>
+                        * Augmented the application monitoring and management dashboard reducing release cycle time.<br/>
+                        * Built security into new product features to achieve 100% compliance with industry best practices.<br/>
+                        * Involved in SL3 team to support major production issues and releases including on call support
+                        during non business hours.<br/>
+                        * Performed as a team member on an agile team focused on software delivery and support, working
+                        in Scaled Agile Framework (SAFe) environment.
                     </p>
                 </div>
             </div> <!-- item end -->
@@ -188,8 +194,10 @@
                     <h3>Choose To Thinq</h3>
                     <p class="info">Project Intern <span>&bull;</span> <em class="date">October 2016 - May 2017</em></p>
                     <p>
-                        Part of the development team at ChooseToThinq, developed an AI based chat bot using api.ai in
-                        the field of learning as part of B.Tech.Project.
+                        * Played a pivotal role in the development of artificial intelligence based chat bot that acts as
+                        book recommender based on user interests.<br/>
+                        * Deployed the chatbot on major social platforms including Facebook Messenger.
+
                     </p>
                 </div>
             </div> <!-- item end -->
@@ -198,8 +206,9 @@
                     <h3>MasterCard</h3>
                     <p class="info">Summer Intern <span>&bull;</span> <em class="date">May 2016 - July 2016</em></p>
                     <p>
-                        Part of development team under Corporate Business Technologies. Developed a AngularJS, Spring
-                        Boot and MongoDB based web application for Project/Resource management.
+                        * Built a highly robust and reliable webapp that acts as resource forecasting and management platform
+                        effectively reducing manual overheads by 90%.<br/>
+                        * Documented the design and architectural flow of the platform improving product maintenance.
                     </p>
                 </div>
             </div> <!-- item end -->
@@ -207,14 +216,10 @@
                 <div class="twelve columns">
                     <h3>COEP WebTeam</h3>
                     <p class="info">Project Lead <span>&bull;</span> <em class="date">April 2016 - May 2017</em></p>
-                    <p>
-                        Managed a team of developers and content writers. Delivered the revamped COEP website using
-                        Drupal framework.
-                    </p>
                     <p class="info">Technical Member <span>&bull;</span> <em class="date">August 2015 - March 2016</em></p>
                     <p>
-                        Part of the development team at COEP WebTeam. Developed and managed COEP website and other
-                        services hosted on internal servers.
+                        * Led the effort to maintain and support the project with near to zero downtime and security breaches.<br/>
+                        * Revamped the project to use secure and robust content management system improving outreach.
                     </p>
                 </div>
             </div> <!-- item end -->
